<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/some_text"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="#ACA7A7"
        android:gravity="center_horizontal"
        android:text="@string/task1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#050507"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/for_something_to_type"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#8AC644"
        android:hint="@string/type_something_right_here"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/click_on_me"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:text="@string/big_button"
        android:textColor="#FCFCFD"
        android:textSize="20sp"
        app:backgroundTint="#CA554C" />

    <Switch
        android:id="@+id/switch_on"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="#ADCDE6"
        android:gravity="center"
        android:text="@string/switcher"
        android:textColor="#B10C0C"
        android:textSize="25sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/forever"
        android:textSize="22sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/against"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:text="@string/always_off"
        android:textOff="@string/dead"
        android:textOn="@string/alive" />


</LinearLayout>