<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/id"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:hint="@string/name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="phone"
        android:hint="@string/phone_number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="number"
        android:hint="@string/passport_number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>